--- a/StockTracker/build.gradle
+++ b/StockTracker/build.gradle
@@ -5,6 +5,14 @@ plugins {
 	id 'war'
 }
 
+war {
+  // Gradle will replace the variable archivesBaseName
+  // with our app name, as defined in settings.gradle
+  archiveFileName = "${archivesBaseName}.war" //DO NOT replace the variable
+  destinationDirectory = file("../")     // Project workspace directory
+}
+
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
