--- a/StockTracker/src/main/resources/application.properties
+++ b/StockTracker/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=stockuser
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jmx.default-domain=StockTracker //use the name of the Spring Boot project
+
